# comfy-asset-downloader

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
examples/: CheyenneXL-samurai.json  dreamshaperXL-forest-woman.json  epiCRealismXL-sparrow.json  flux1-schnell-cyborg.json  hidream-dev-face.json  hidream-fast-crystalball.json  jibMixRealisticXL-hamster.json  sd3.5_large_fp8-spider.json  sdxl-base_refiner_sytan-tiger.json  sdxl_base_refiner-bottle.json  sdxl_lightning-enchantress.json  sdxl_turbo1-fox.json  wan-image-to-video.json
js/: assetDownloader.js
nodes/: asset_downloader.py  install.py
