[project]
name = "comfy-asset-downloader"
description = "This node allows downloading models and other resources used within a ComfyUI workflow making it easier to resolve referenced assets and share workflows"
version = "0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ServiceStack/comfy-asset-downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "servicestack"
DisplayName = "Comfy Asset Downloader"
Icon = ""
